--- a/styles/app.css
+++ b/styles/app.css
@@ -219,7 +219,3 @@ shop-pay-button {
     }
   }
 }
-
-.needsclick {
-  z-index: 1 !important;
-}
